--- a/package.json
+++ b/package.json
@@ -19,15 +19,14 @@
   "dependencies": {
     "debug": "2.1.1",
     "denodeify": "1.2.1",
-    "lodash": "3.3.1",
-    "soap": "0.8.0"
+    "lodash": "^4.17.15",
+    "soap": "^0.31.0"
   },
   "devDependencies": {
     "async": "^0.9.0",
     "coveralls": "^2.11.2",
     "gulp": "^3.8.11",
     "gulp-bump": "^0.2.1",
-    "gulp-doxx": "0.0.4",
     "gulp-istanbul": "^0.6.0",
     "gulp-jscs": "^1.4.0",
     "gulp-jshint": "^1.9.2",
@@ -38,7 +37,6 @@
     "jshint-stylish": "^1.0.1",
     "mocha": "^2.1.0",
     "nock": "^0.59.1",
-    "node-inspector": "^0.9.1",
     "should": "^5.0.1"
   },
   "scripts": {
